commented out controller in 'search' .state, to restore original functionality

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 						<img src="assets/img/EatIn_logo_166x81.png" alt="EatIn Logo" />
 					</a>
 				</li>
-				<div class="nav-right">
-				<li>
+				<!--<div class="nav-right">-->
+				<li class="nav-right">
 					<a ui-sref="about"><span class="glyphicon glyphicon-question-sign"></span></a>
 				</li>
-				<li>
+				<li class="nav-right">
 					<a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span></a>
 				</li>
-				<li>
+				<li class="nav-right">
 					<a ui-sref="search"><span class="glyphicon glyphicon-search"></span></a>
 				</li>
-				</div>
+				<!--</div>-->
 			</ul>
 		</nav>
 		
