using directives; form loads but runs search before input

--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 				</li>
 			</ul>		
 		</nav>
-	<!--This div will contain views assigned by controllers-->
-		<div class="ui-view"></div>
+		<section search-form>
+		
+		</section>
+		<section search-results>
+		
+		</section>
 	</div>
 <!--Scripts placed at end of body for faster app load time-->
 
